--- a/index.html
+++ b/index.html
@@ -5,21 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
+
   </head>
 
   <body>
-    <header>
-      <a href="">WebStudio</a>
-      <nav>
-        <ul>
-          <li>
-            <a href="">Студия</a>
+    <header class="header">
+      <a href="" class="header-logo">WebStudio</a>
+      <nav class="header-nav">
+        <ul class="header-list">
+          <li class="header-item">
+            <a href="./index.html" class="header-link">Студия</a>
           </li>
-          <li>
-            <a href="">Портфолио</a>
+          <li class="header-item">
+            <a href="./portfolio.html" class="header-link">Портфолио</a>
           </li>
-          <li>
-            <a href="">Контакты</a>
+          <li class="header-item">
+            <a href=""class="header-link">Контакты</a>
           </li>
         </ul>
       </nav>
