Add pictures to portfolio

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
       <a href="" class="header-logo">WebStudio</a>
       <nav class="header-nav">
-        <ul class="header-list">
+        <ul class="header-list list">
           <li class="header-item">
             <a href="./index.html" class="header-link">Студия</a>
           </li>
@@ -29,46 +29,46 @@
           </li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="header-contacts list">
+        <li><a href="mailto:info@devstudio.com" class="header-mail">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="header-tel" >+38 096 111 11 11</a></li>
       </ul>
     </header>
 
     <main>
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="hero">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button type="button" class="hero-btn">Заказать услугу</button>
       </section>
 
-      <section>
+      <section class="qualities">
         <!-- Особенности -->
         <h2>Особенности</h2>
-        <ul>
-          <li>
-            <h3>Внимание к деталям</h3>
-            <p>
+        <ul class="gualities-list list">
+          <li class="qualities-item">
+            <h3 class="qualities-title">Внимание к деталям</h3>
+            <p class="qualities-text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
-          <li>
-            <h3>Пунктуальность</h3>
-            <p>
+          <li class="qualities-item">
+            <h3 class="qualities-title">Пунктуальность</h3>
+            <p class="qualities-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
-          <li>
-            <h3>Планирование</h3>
-            <p>
+          <li class="qualities-item">
+            <h3 class="qualities-title">Планирование</h3>
+            <p class="qualities-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-          <li>
-            <h3>Современные технологии</h3>
-            <p>
+          <li class="qualities-item">
+            <h3 class="qualities-title">Современные технологии</h3>
+            <p class="qualities-text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -77,9 +77,9 @@
       </section>
       <section>
         <!-- Чем мы занимаемся -->
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-          <li>
+        <h2 class="work">Чем мы занимаемся</h2>
+        <ul class="work-list list">
+          <li class="work-item">
             <img
               src="./images/img1.jpg"
               alt="верстка"
@@ -87,7 +87,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="work-item">
             <img
               src="./images/img2.jpg"
               alt="разработка приложений"
@@ -95,7 +95,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="work-item">
             <img
               src="./images/img3.jpg"
               alt="дизайн"
@@ -105,11 +105,11 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="team">
         <!-- Команда -->
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
+        <h2 class="team-title">Наша команда</h2>
+        <ul class="team-list list">
+          <li class="team-item">
             <img
               src="./images/photo1.jpg"
               alt="Игорь Демьяненко"
@@ -117,8 +117,8 @@
               height="260"
             />
             <ul>
-              <li>Игорь Демьяненко</li>
-              <li lang="en">Product Designer</li>
+              <li class="team-name list">Игорь Демьяненко</li>
+              <li class="team-prof list" lang="en">Product Designer</li>
             </ul>
           </li>
           <li>
@@ -129,8 +129,8 @@
               height="260"
             />
             <ul>
-              <li>Ольга Репина</li>
-              <li lang="en">Frontend Developer</li>
+              <li class="team-name list">Ольга Репина</li>
+              <li class="team-prof list" lang="en">Frontend Developer</li>
             </ul>
           </li>
           <li>
@@ -141,8 +141,8 @@
               height="260"
             />
             <ul>
-              <li>Николай Тарасов</li>
-              <li lang="en">Marketing</li>
+              <li class="team-name list">Николай Тарасов</li>
+              <li class="team-prof list" lang="en">Marketing</li>
             </ul>
           </li>
           <li>
@@ -153,29 +153,29 @@
               height="260"
             />
             <ul>
-              <li>Михаил Ермаков</li>
-              <li lang="en">UI Designer</li>
+              <li class="team-name list">Михаил Ермаков</li>
+              <li class="team-prof list" lang="en">UI Designer</li>
             </ul>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="WebStudio">WebStudio</a>
+    <footer class="footer">
+      <a href="WebStudio" class="footer-logo">WebStudio</a>
       <address>
-        <ul>
-          <li>
+        <ul class="footer-contacts list">
+          <li class="footer-map">
             <a
-              href="https://bit.ly/3pXMvUd"
+              href="https://bit.ly/3pXMvUd" 
               target="_blank"
               rel="noreferrer noopener"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li>
+          <li class="footer-mail">
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li>
+          <li class="footer-tel">
             <a href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
