a little bit css and portfolio

--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
 
   <body>
     <header class="header">
-      <a href="" class="header-logo">WebStudio</a>
+      <a href="" class="logo">Web<span class="header-logo">Studio</span></a>
       <nav class="header-nav">
         <ul class="header-list list">
           <li class="header-item">
-            <a href="./index.html" class="header-link">Студия</a>
+            <a href="./index.html" class="header-link link">Студия</a>
           </li>
           <li class="header-item">
-            <a href="./portfolio.html" class="header-link">Портфолио</a>
+            <a href="./portfolio.html" class="header-link link">Портфолио</a>
           </li>
           <li class="header-item">
-            <a href=""class="header-link">Контакты</a>
+            <a href=""class="header-link link">Контакты</a>
           </li>
         </ul>
       </nav>
       <ul class="header-contacts list">
-        <li><a href="mailto:info@devstudio.com" class="header-mail">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="header-tel" >+38 096 111 11 11</a></li>
+        <li><a href="mailto:info@devstudio.com" class="header-mail link">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="header-tel link" >+38 096 111 11 11</a></li>
       </ul>
     </header>
 
@@ -43,7 +43,7 @@
 
       <section class="qualities">
         <!-- Особенности -->
-        <h2>Особенности</h2>
+        <h2 class="visually-hidden">Особенности</h2>
         <ul class="gualities-list list">
           <li class="qualities-item">
             <h3 class="qualities-title">Внимание к деталям</h3>
@@ -75,9 +75,9 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="section">
         <!-- Чем мы занимаемся -->
-        <h2 class="work">Чем мы занимаемся</h2>
+        <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="work-list list">
           <li class="work-item">
             <img
@@ -105,9 +105,9 @@
           </li>
         </ul>
       </section>
-      <section class="team">
+      <section class="section>
         <!-- Команда -->
-        <h2 class="team-title">Наша команда</h2>
+        <h2 class="section-title">Наша команда</h2>
         <ul class="team-list list">
           <li class="team-item">
             <img
@@ -161,10 +161,10 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="WebStudio" class="footer-logo">WebStudio</a>
+      <a href="WebStudio" class="logo">Web<span class="footer-logo">Studio</span></a>
       <address>
-        <ul class="footer-contacts list">
-          <li class="footer-map">
+        <ul class="footer-contacts list ">
+          <li class="footer-map link">
             <a
               href="https://bit.ly/3pXMvUd" 
               target="_blank"
@@ -172,10 +172,10 @@
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li class="footer-mail">
+          <li class="footer-mail link">
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li class="footer-tel">
+          <li class="footer-tel link">
             <a href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
