home work for check

--- a/index.html
+++ b/index.html
@@ -5,33 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <header class="header">
       <a href="" class="logo">Web<span class="header-logo">Studio</span></a>
-      <nav class="header-nav">
+      <nav>
         <ul class="header-list list">
           <li class="header-item">
-            <a href="./index.html" class="header-link link">Студия</a>
+            <a href="./index.html" class="link current">Студия</a>
           </li>
           <li class="header-item">
-            <a href="./portfolio.html" class="header-link link">Портфолио</a>
+            <a href="./portfolio.html" class="link">Портфолио</a>
           </li>
           <li class="header-item">
-            <a href=""class="header-link link">Контакты</a>
+            <a href="" class="link">Контакты</a>
           </li>
         </ul>
       </nav>
       <ul class="header-contacts list">
-        <li><a href="mailto:info@devstudio.com" class="header-mail link">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="header-tel link" >+38 096 111 11 11</a></li>
+        <li>
+          <a href="mailto:info@devstudio.com" class="header-contacts link">info@devstudio.com</a>
+        </li>
+        <li><a href="tel:+380961111111" class="header-contacts link">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
@@ -41,36 +45,32 @@
         <button type="button" class="hero-btn">Заказать услугу</button>
       </section>
 
-      <section class="qualities">
+      <section class="section">
         <!-- Особенности -->
         <h2 class="visually-hidden">Особенности</h2>
-        <ul class="gualities-list list">
+        <ul>
           <li class="qualities-item">
             <h3 class="qualities-title">Внимание к деталям</h3>
             <p class="qualities-text">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
+              Идейные соображения, а также начало повседневной работы по формированию позиции.
             </p>
           </li>
           <li class="qualities-item">
             <h3 class="qualities-title">Пунктуальность</h3>
             <p class="qualities-text">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
+              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
           <li class="qualities-item">
             <h3 class="qualities-title">Планирование</h3>
             <p class="qualities-text">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
+              Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
           <li class="qualities-item">
             <h3 class="qualities-title">Современные технологии</h3>
             <p class="qualities-text">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
+              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
             </p>
           </li>
         </ul>
@@ -80,81 +80,46 @@
         <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="work-list list">
           <li class="work-item">
-            <img
-              src="./images/img1.jpg"
-              alt="верстка"
-              width="370"
-              height="294"
-            />
+            <img src="./images/img1.jpg" alt="верстка" width="370" height="294" />
           </li>
           <li class="work-item">
-            <img
-              src="./images/img2.jpg"
-              alt="разработка приложений"
-              width="370"
-              height="294"
-            />
+            <img src="./images/img2.jpg" alt="разработка приложений" width="370" height="294" />
           </li>
           <li class="work-item">
-            <img
-              src="./images/img3.jpg"
-              alt="дизайн"
-              width="370"
-              height="294"
-            />
+            <img src="./images/img3.jpg" alt="дизайн" width="370" height="294" />
           </li>
         </ul>
       </section>
-      <section class="section>
+      <section class="section team">
         <!-- Команда -->
         <h2 class="section-title">Наша команда</h2>
         <ul class="team-list list">
           <li class="team-item">
-            <img
-              src="./images/photo1.jpg"
-              alt="Игорь Демьяненко"
-              width="270"
-              height="260"
-            />
+            <img src="./images/photo1.jpg" alt="Игорь Демьяненко" width="270" height="260" />
             <ul>
-              <li class="team-name list">Игорь Демьяненко</li>
-              <li class="team-prof list" lang="en">Product Designer</li>
+              <li class="team-name">Игорь Демьяненко</li>
+              <li class="team-prof" lang="en">Product Designer</li>
             </ul>
           </li>
           <li>
-            <img
-              src="./images/photo2.jpg"
-              alt="Ольга Репина"
-              width="270"
-              height="260"
-            />
+            <img src="./images/photo2.jpg" alt="Ольга Репина" width="270" height="260" />
             <ul>
-              <li class="team-name list">Ольга Репина</li>
-              <li class="team-prof list" lang="en">Frontend Developer</li>
+              <li class="team-name">Ольга Репина</li>
+              <li class="team-prof" lang="en">Frontend Developer</li>
             </ul>
           </li>
           <li>
-            <img
-              src="./images/photo3.jpg"
-              alt="Николай Тарасов"
-              width="270"
-              height="260"
-            />
+            <img src="./images/photo3.jpg" alt="Николай Тарасов" width="270" height="260" />
             <ul>
-              <li class="team-name list">Николай Тарасов</li>
-              <li class="team-prof list" lang="en">Marketing</li>
+              <li class="team-name">Николай Тарасов</li>
+              <li class="team-prof" lang="en">Marketing</li>
             </ul>
           </li>
           <li>
-            <img
-              src="./images/photo4.jpg"
-              alt="Михаил Ермаков"
-              width="270"
-              height="260"
-            />
+            <img src="./images/photo4.jpg" alt="Михаил Ермаков" width="270" height="260" />
             <ul>
-              <li class="team-name list">Михаил Ермаков</li>
-              <li class="team-prof list" lang="en">UI Designer</li>
+              <li class="team-name">Михаил Ермаков</li>
+              <li class="team-prof" lang="en">UI Designer</li>
             </ul>
           </li>
         </ul>
@@ -163,20 +128,21 @@
     <footer class="footer">
       <a href="WebStudio" class="logo">Web<span class="footer-logo">Studio</span></a>
       <address>
-        <ul class="footer-contacts list ">
-          <li class="footer-map link">
+        <ul>
+          <li class="footer-adress">
             <a
-              href="https://bit.ly/3pXMvUd" 
+              href="https://bit.ly/3pXMvUd"
+              class="footer-adress link"
               target="_blank"
               rel="noreferrer noopener"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li class="footer-mail link">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <li class="footer-contacts">
+            <a href="mailto:info@devstudio.com" class="footer-contacts link">info@devstudio.com</a>
           </li>
-          <li class="footer-tel link">
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <li>
+            <a href="tel:+380961111111" class="footer-contacts link">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
