--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -21,13 +21,13 @@
       <nav>
         <ul class="header-list list">
           <li class="header-item">
-            <a href="./index.html" class="link current">Студия</a>
+            <a href="./index.html" class="link current">Студія</a>
           </li>
           <li class="header-item">
-            <a href="./portfolio.html" class="link">Портфолио</a>
+            <a href="./portfolio.html" class="link">Портфоліо</a>
           </li>
           <li class="header-item">
-            <a href="" class="link">Контакты</a>
+            <a href="" class="link">Контакти</a>
           </li>
         </ul>
       </nav>
@@ -41,52 +41,52 @@
 
     <main>
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="hero-btn">Заказать услугу</button>
+        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+        <button type="button" class="hero-btn">Замовити послугу</button>
       </section>
 
       <section class="section">
-        <!-- Особенности -->
-        <h2 class="visually-hidden">Особенности</h2>
+        <!-- Особливості -->
+        <h2 class="visually-hidden">Особливості</h2>
         <ul>
           <li class="qualities-item">
-            <h3 class="qualities-title">Внимание к деталям</h3>
+            <h3 class="qualities-title">Увага до деталей</h3>
             <p class="qualities-text">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
+              Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
             </p>
           </li>
           <li class="qualities-item">
-            <h3 class="qualities-title">Пунктуальность</h3>
+            <h3 class="qualities-title">Пунктуальність</h3>
             <p class="qualities-text">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              Завдання організації, особливо рамки і місце навчання кадрів тягне у себе..
             </p>
           </li>
           <li class="qualities-item">
-            <h3 class="qualities-title">Планирование</h3>
+            <h3 class="qualities-title">Планування</h3>
             <p class="qualities-text">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
+              Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li class="qualities-item">
-            <h3 class="qualities-title">Современные технологии</h3>
+            <h3 class="qualities-title">Сучасні технологиії</h3>
             <p class="qualities-text">
-              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
             </p>
           </li>
         </ul>
       </section>
       <section class="section">
-        <!-- Чем мы занимаемся -->
-        <h2 class="section-title">Чем мы занимаемся</h2>
+        <!-- Чим ми займаємося -->
+        <h2 class="section-title">Чим ми займаємося</h2>
         <ul class="work-list list">
           <li class="work-item">
-            <img src="./images/img1.jpg" alt="верстка" width="370" height="294" />
+            <img src="./images/img1.jpg" alt="верстка" width="370" />
           </li>
           <li class="work-item">
-            <img src="./images/img2.jpg" alt="разработка приложений" width="370" height="294" />
+            <img src="./images/img2.jpg" alt="розробка додатків" width="370" />
           </li>
           <li class="work-item">
-            <img src="./images/img3.jpg" alt="дизайн" width="370" height="294" />
+            <img src="./images/img3.jpg" alt="дизайн" width="370" />
           </li>
         </ul>
       </section>
@@ -95,32 +95,24 @@
         <h2 class="section-title">Наша команда</h2>
         <ul class="team-list list">
           <li class="team-item">
-            <img src="./images/photo1.jpg" alt="Игорь Демьяненко" width="270" height="260" />
-            <ul>
-              <li class="team-name">Игорь Демьяненко</li>
-              <li class="team-prof" lang="en">Product Designer</li>
-            </ul>
+            <img src="./images/photo1.jpg" alt="Ігор Дем'яненко" width="270" />
+            <h3 class="team-name">Ігор Дем'яненко</h3>
+            <p class="team-prof" lang="en">Product Designer</p>
           </li>
           <li>
-            <img src="./images/photo2.jpg" alt="Ольга Репина" width="270" height="260" />
-            <ul>
-              <li class="team-name">Ольга Репина</li>
-              <li class="team-prof" lang="en">Frontend Developer</li>
-            </ul>
+            <img src="./images/photo2.jpg" alt="Ольга Рєпіна" width="270" />
+            <h3 class="team-name">Ольга Рєпіна</h3>
+            <p class="team-prof" lang="en">Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/photo3.jpg" alt="Николай Тарасов" width="270" height="260" />
-            <ul>
-              <li class="team-name">Николай Тарасов</li>
-              <li class="team-prof" lang="en">Marketing</li>
-            </ul>
+            <img src="./images/photo3.jpg" alt="Микола Тарасов" width="270" />
+            <h3 class="team-name">Микола Тарасов</h3>
+            <p class="team-prof" lang="en">Marketing</p>
           </li>
           <li>
-            <img src="./images/photo4.jpg" alt="Михаил Ермаков" width="270" height="260" />
-            <ul>
-              <li class="team-name">Михаил Ермаков</li>
-              <li class="team-prof" lang="en">UI Designer</li>
-            </ul>
+            <img src="./images/photo4.jpg" alt="Михайло Єрмаков" width="270" />
+            <h3 class="team-name">Михайло Єрмаков</h3>
+            <p class="team-prof" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -135,7 +127,7 @@
               class="footer-adress link"
               target="_blank"
               rel="noreferrer noopener"
-              >г. Киев, пр-т Леси Украинки, 26</a
+              >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
           <li class="footer-contacts">
