--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -21,13 +21,13 @@
       <nav>
         <ul class="header-list list">
           <li class="header-item">
-            <a href="./index.html" class="link">Студия</a>
+            <a href="./index.html" class="link">Студія</a>
           </li>
           <li class="header-item">
-            <a href="./portfolio.html" class="link current">Портфолио</a>
+            <a href="./portfolio.html" class="link current">Портфоліо</a>
           </li>
           <li class="header-item">
-            <a href="" class="link">Контакты</a>
+            <a href="" class="link">Контакти</a>
           </li>
         </ul>
       </nav>
@@ -41,76 +41,76 @@
 
     <main>
       <section class="section">
-        <h1 class="visually-hidden">Портфолио</h1>
+        <h1 class="visually-hidden">Портфоліо</h1>
         <ul>
-          <li><button type="button" class="button primary">Все</button></li>
-          <li><button type="button" class="button secondary">Веб-сайты</button></li>
-          <li><button type="button" class="button secondary">Приложения</button></li>
-          <li><button type="button" class="button secondaryy">Дизайн</button></li>
-          <li><button type="button" class="button secondary">Маркетинг</button></li>
+          <li><button type="button" class="button">Все</button></li>
+          <li><button type="button" class="button">Веб-сайти</button></li>
+          <li><button type="button" class="button">Додатки</button></li>
+          <li><button type="button" class="button">Дизайн</button></li>
+          <li><button type="button" class="button">Маркетинг</button></li>
         </ul>
         <ul class="portfolio">
           <li>
             <a href="" class="link">
-              <img src="./images/pic1.jpg" alt="Notebook" width="370" height="294" />
+              <img src="./images/pic1.jpg" alt="Notebook" width="370" />
               <h2 class="portfolio-title">Технокряк</h2>
               <p class="portfolio-item">Веб-сайт</p>
             </a>
           </li>
           <li>
             <a href="" class="link"
-              ><img src="./images/pic2.jpg" alt="Basketbol players" width="370" height="294" />
+              ><img src="./images/pic2.jpg" alt="Basketbol players" width="370" />
               <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
               <p class="portfolio-item">Дизайн</p>
             </a>
           </li>
           <li>
             <a href="" class="link"
-              ><img src="./images/pic3.jpg" alt="" width="370" height="294" />
+              ><img src="./images/pic3.jpg" alt="" width="370" />
               <h2 class="portfolio-title">Ресторан Seafood</h2>
-              <p class="portfolio-item">Приложение</p>
+              <p class="portfolio-item">Додаток</p>
             </a>
           </li>
           <li>
             <a href="" class="link"
-              ><img src="./images/pic4.jpg" alt="" width="370" height="294" />
-              <h2 class="portfolio-title">Проект Prime</h2>
+              ><img src="./images/pic4.jpg" alt="" width="370" />
+              <h2 class="portfolio-title">Проєкт Prime</h2>
               <p class="portfolio-item">Маркетинг</p>
             </a>
           </li>
           <li>
             <a href="" class="link"
-              ><img src="./images/pic5.jpg" alt="" width="370" height="294" />
-              <h2 class="portfolio-title">Проект Boxes</h2>
-              <p class="portfolio-item">Приложение</p>
+              ><img src="./images/pic5.jpg" alt="" width="370" />
+              <h2 class="portfolio-title">Проєкт Boxes</h2>
+              <p class="portfolio-item">Додаток</p>
             </a>
           </li>
           <li>
             <a href="" class="link">
-              <img src="./images/pic6.jpg" alt="" width="370" height="294" />
+              <img src="./images/pic6.jpg" alt="" width="370" />
               <h2 class="portfolio-title">Inspiration has no Borders</h2>
               <p class="portfolio-item">Веб-сайт</p>
             </a>
           </li>
           <li>
             <a href="" class="link">
-              <img src="./images/pic7.jpg" alt="" width="370" height="294" />
-              <h2 class="portfolio-title">Издание Limited Edition</h2>
+              <img src="./images/pic7.jpg" alt="" width="370" />
+              <h2 class="portfolio-title">Видання Limited Edition</h2>
               <p class="portfolio-item">Дизайн</p>
             </a>
           </li>
           <li>
             <a href="" class="link">
-              <img src="./images/pic8.jpg" alt="" width="370" height="294" />
+              <img src="./images/pic8.jpg" alt="" width="370" />
               <h2 class="portfolio-title">Проект LAB</h2>
               <p class="portfolio-item">Маркетинг</p>
             </a>
           </li>
           <li>
             <a href="" class="link">
-              <img src="./images/pic9.jpg" alt="" width="370" height="294" />
+              <img src="./images/pic9.jpg" alt="" width="370" />
               <h2 class="portfolio-title">Growing Business</h2>
-              <p class="portfolio-item">Приложение</p>
+              <p class="portfolio-item">Додаток</p>
             </a>
           </li>
         </ul>
@@ -126,7 +126,7 @@
               class="footer-adress link"
               target="_blank"
               rel="noreferrer noopener"
-              >г. Киев, пр-т Леси Украинки, 26</a
+              >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
           <li class="footer-contacts">
